AR-1811 Fix wrapping for linked digital objects with a file_version URI

--- a/public/app/assets/stylesheets/archivesspace/aspace.scss
+++ b/public/app/assets/stylesheets/archivesspace/aspace.scss
@@ -732,6 +732,12 @@ i.giant {
    display:block;
    max-width: 100%;
 }
+
+.objectimage button[type="submit"] {
+  width: 100%;
+  white-space: normal;
+}
+
 span.component {
    font-weight: bold;
 }
